--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Ano: 2017 <br/>\r Linguagem: p5.js <br/>",
   "main": "index.js",
   "engines": {
-    "node": "16.14.0"
+    "node": "16.14.0",
+    "npm": "8.3.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index"
   },
   "repository": {
     "type": "git",
